@@ -19,6 +19,7 @@ Version 6.4.21
     wenn sqlite auch gefunden wurde
   - NASM-Erkennung unter MSYS 2.0 i686 gefixt
   - Fixed: Deadlock in CThreadPool::Stop behoben
+  - LPSTR wird nicht mehr verwendet
 
 Version 6.4.20 vom 13.07.2014	(SVN-Tag: REL_6_4_20)
   - Funktion GetGlobalEncoding hinzugefügt
